--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
     "no-const-assign": ["error"],
     "prefer-template": ["error"],
     "template-curly-spacing": ["error", "never"],
-    "space-before-function-paren": ["error", "never"],
+    // "space-before-function-paren": ["error", "never"],
     "semi": ["error", "always"],
     "semi-spacing": ["error", { "before": false, "after": true }],
     "semi-style": ["error", "last"],
